sage-test.txt


**********************************************************************
File "ads.py", line 642, in ads
Failed example:
    if 'Red' in fruit_color:
Exception raised:
    Traceback (most recent call last):
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 681, in _run
        self.compile_and_execute(example, compiler, test.globs)
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 1121, in compile_and_execute
        compiled = compiler(example)
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 649, in compiler
        compileflags, 1)
      File "<doctest ads[179]>", line 1
        if 'Red' in fruit_color:
                               ^
    SyntaxError: unexpected EOF while parsing
**********************************************************************
File "ads.py", line 643, in ads
Failed example:
      fruit_color['Red']=fruit_color['Red']+['raspberry']
Exception raised:
    Traceback (most recent call last):
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 681, in _run
        self.compile_and_execute(example, compiler, test.globs)
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 1121, in compile_and_execute
        compiled = compiler(example)
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 649, in compiler
        compileflags, 1)
      File "<doctest ads[180]>", line 1
        fruit_color['Red']=fruit_color['Red']+['raspberry']
        ^
    IndentationError: unexpected indent
**********************************************************************
File "ads.py", line 644, in ads
Failed example:
    else:
Exception raised:
    Traceback (most recent call last):
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 681, in _run
        self.compile_and_execute(example, compiler, test.globs)
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 1121, in compile_and_execute
        compiled = compiler(example)
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 649, in compiler
        compileflags, 1)
      File "<doctest ads[181]>", line 1
        else:
           ^
    SyntaxError: invalid syntax
**********************************************************************
File "ads.py", line 645, in ads
Failed example:
      fruit_color['Red']=['raspberry']
Exception raised:
    Traceback (most recent call last):
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 681, in _run
        self.compile_and_execute(example, compiler, test.globs)
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 1121, in compile_and_execute
        compiled = compiler(example)
      File "/ext/sage/sage-8.9_1804/local/lib/python2.7/site-packages/sage/doctest/forker.py", line 649, in compiler
        compileflags, 1)
      File "<doctest ads[182]>", line 1
        fruit_color['Red']=['raspberry']
        ^
    IndentationError: unexpected indent
**********************************************************************
File "ads.py", line 646, in ads
Failed example:
    fruit_color['Red']
Expected:
    ['apple', 'pomegranate', 'blood orange', 'raspberry', 'raspberry']
Got:
    ['apple', 'pomegranate', 'blood orange']
**********************************************************************
File "ads.py", line 651, in ads
Failed example:
    for fruit in fruit_color:
        print([fruit,fruit_color[fruit]])
Expected:
    ['Purple', ['plum', 'grape']]
    ['Orange', ['orange', 'pineapple']]
    ['Green', ['apple', 'pear', 'grape', 'lime']]
    ['Yellow', ['banana', 'apple', 'lemon']]
    ['Red', ['apple', 'pomegranate', 'blood orange','raspberry']]
Got:
    ['Purple', ['plum', 'grape']]
    ['Orange', ['orange', 'pineapple']]
    ['Green', ['apple', 'pear', 'grape', 'lime']]
    ['Yellow', ['banana', 'apple', 'lemon']]
    ['Red', ['apple', 'pomegranate', 'blood orange']]
**********************************************************************
File "ads.py", line 661, in ads
Failed example:
    DiGraph(fruit_color).plot()
Expected nothing
Got:
    Graphics object consisting of 31 graphics primitives
**********************************************************************
File "ads.py", line 671, in ads
Failed example:
    vertex_pos
Expected:
    {'Purple': (-5, 0), 'Orange': (-5, 1), 'Green': (-5, 2), 'Red': (-5, 4), 'Yellow': (-5, 3)}
Got:
    {'Green': (-5, 2),
     'Orange': (-5, 1),
     'Purple': (-5, 0),
     'Red': (-5, 4),
     'Yellow': (-5, 3)}
**********************************************************************
File "ads.py", line 683, in ads
Failed example:
    vertex_pos
Expected:
    {'blood orange': (5, 0), 'grape': (5, 1), 'apple': (5, 2), 'Purple': (-5, 0), 'plum': (5, 10), 'pomegranate': (5, 3), 'pear': (5, 4), 'Yellow': (-5, 3), 'orange': (5, 7), 'Green': (-5, 2), 'pineapple': (5, 6), 'Orange': (-5, 1), 'lemon': (5, 8), 'raspberry': (5, 9), 'banana': (5, 5), 'Red': (-5, 4), 'lime': (5, 11)}
Got:
    {'Green': (-5, 2),
     'Orange': (-5, 1),
     'Purple': (-5, 0),
     'Red': (-5, 4),
     'Yellow': (-5, 3),
     'apple': (5, 2),
     'banana': (5, 5),
     'blood orange': (5, 0),
     'grape': (5, 1),
     'lemon': (5, 8),
     'lime': (5, 10),
     'orange': (5, 7),
     'pear': (5, 4),
     'pineapple': (5, 6),
     'plum': (5, 9),
     'pomegranate': (5, 3)}
**********************************************************************
File "ads.py", line 688, in ads
Failed example:
    DiGraph(fruit_color).plot(pos=vertex_pos,vertex_size=1)
Expected nothing
Got:
    Graphics object consisting of 31 graphics primitives
**********************************************************************
1 item had failures:
  89 of 202 in ads
    Error: TAB character found at lines 136,171,172,.,.,.,645
    [201 tests, 89 failures, 4.45 s]
----------------------------------------------------------------------
sage -t ads.py  # Tab character found
sage -t ads.py  # 89 doctests failed
----------------------------------------------------------------------
Total time for all tests: 4.5 seconds
    cpu time: 4.2 seconds
    cumulative wall time: 4.5 seconds
